--- a/gym-routine/index.html
+++ b/gym-routine/index.html
@@ -8,11 +8,13 @@
     </head>
         <main>
             <nav class = 'homepage'>
-                <h2><a href = 'gym-routine/monday' rel = 'noopener noreferrer'>Monday</a></h2>
-                <h2><a href = 'gym-routine/tuesday' rel = 'noopener noreferrer'>Tuesday</a></h2>
-                <h2><a href = 'gym-routine/wednesday' rel = 'noopener noreferrer'>Wednesday</a></h2>
-                <h2><a href = 'gym-routine/thursday' rel = 'noopener noreferrer'>Thursday</a></h2>
-                <h2><a href = 'gym-routine/friday' rel = 'noopener noreferrer'>Friday</a></h2>
+                <ul>
+                    <li><h2><a href = 'gym-routine/monday' rel = 'noopener noreferrer'>Monday</a></h2>      </li>
+                    <li><h2><a href = 'gym-routine/tuesday' rel = 'noopener noreferrer'>Tuesday</a></h2>    </li>
+                    <li><h2><a href = 'gym-routine/wednesday' rel = 'noopener noreferrer'>Wednesday</a></h2></li>
+                    <li><h2><a href = 'gym-routine/thursday' rel = 'noopener noreferrer'>Thursday</a></h2>  </li>
+                    <li><h2><a href = 'gym-routine/friday' rel = 'noopener noreferrer'>Friday</a></h2>      </li>
+                </ul>
             </nav>
         </main>
 </html>
