--- a/gym-routine/index.html
+++ b/gym-routine/index.html
@@ -6,6 +6,9 @@
         <title> Routine </title>
         <link rel = 'stylesheet' href ='styles.css'>
     </head>
+        <header class = 'main-title'>
+            <h1>Week!</h1>
+        </header>
         <main>
             <nav class = 'homepage'>
                 <ul>
