Change relative path for webs

--- a/gym-routine/index.html
+++ b/gym-routine/index.html
@@ -12,11 +12,11 @@
         <main>
             <nav class = 'homepage'>
                 <ul>
-                    <li><h2><a href = 'gym-routine/monday' rel = 'noopener noreferrer'>Monday</a></h2>      </li>
-                    <li><h2><a href = 'gym-routine/tuesday' rel = 'noopener noreferrer'>Tuesday</a></h2>    </li>
-                    <li><h2><a href = 'gym-routine/wednesday' rel = 'noopener noreferrer'>Wednesday</a></h2></li>
-                    <li><h2><a href = 'gym-routine/thursday' rel = 'noopener noreferrer'>Thursday</a></h2>  </li>
-                    <li><h2><a href = 'gym-routine/friday' rel = 'noopener noreferrer'>Friday</a></h2>      </li>
+                    <li><h2><a href = 'webs/monday' rel = 'noopener noreferrer'>Monday</a></h2>      </li>
+                    <li><h2><a href = 'webs/tuesday' rel = 'noopener noreferrer'>Tuesday</a></h2>    </li>
+                    <li><h2><a href = 'webs/wednesday' rel = 'noopener noreferrer'>Wednesday</a></h2></li>
+                    <li><h2><a href = 'webs/thursday' rel = 'noopener noreferrer'>Thursday</a></h2>  </li>
+                    <li><h2><a href = 'webs/friday' rel = 'noopener noreferrer'>Friday</a></h2>      </li>
                 </ul>
             </nav>
         </main>
