Polish indetation and accesibility, remove extra rel in index.html

--- a/gym-routine/webs/monday.html
+++ b/gym-routine/webs/monday.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang = 'en'>
+<html lang = 'en-US'>
     <head>
         <meta name = 'viewport' content = 'width=device-width, initial-scale=1.0'>
         <meta charset = 'UTF-8'>
         <title> Monday </title>
         <link rel = 'stylesheet' href ='../styles.css'>
     </head>
-    <main>
+    <body class = 'monday-list'>  
         <header class = 'main-title'>
             <h1> Today : <h1>
         </header>
-        <body class = 'monday-list'>
+        <main>
             <ol>
                 <li><h2>Sentadilla con Barra 4x8 <code> ---> </code><a href = 'https://www.adfisioterapiavalencia.com/blog/sentadilla-con-barra/#:~:text=rendimiento%20y%20bienestar!-,T%C3%89CNICA,-CORRECTA%20PARA%20REALIZAR' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
                 <li><h2>Prensa 90 4x10<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/prensa-horizontal-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
@@ -19,5 +19,6 @@
                 <li><h2>Isquiotibiales Maquina 3x15<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-femoral-tumbado/#:~:text=Ajusta%20el%20coj%C3%ADn%20de%20los' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
                 <li><h2>Gemelos 4x20<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/extension-de-gemelos-sentado-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
             <ol>
-        </body>
-    </main>
+        </main>
+    </body>
+</html>
