--- a/gym-routine/index.html
+++ b/gym-routine/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang = 'en'>
+<html lang = 'en-US'>
     <head>
         <meta name = 'viewport' content = 'width=device-width, initial-scale=1.0'>
         <meta charset = 'UTF-8'>
         <title> Routine </title>
         <link rel = 'stylesheet' href ='styles.css'>
     </head>
+    <body>
         <header class = 'main-title'>
             <h1>Week!</h1>
         </header>
         <main>
             <nav class = 'homepage'>
                 <ul>
-                    <li><h2><a href = 'webs/monday.html' rel = 'noopener noreferrer'>Monday</a></h2>      </li>
-                    <li><h2><a href = 'webs/tuesday.html' rel = 'noopener noreferrer'>Tuesday</a></h2>    </li>
-                    <li><h2><a href = 'webs/wednesday.html' rel = 'noopener noreferrer'>Wednesday</a></h2></li>
-                    <li><h2><a href = 'webs/thursday.html' rel = 'noopener noreferrer'>Thursday</a></h2>  </li>
-                    <li><h2><a href = 'webs/friday.html' rel = 'noopener noreferrer'>Friday</a></h2>      </li>
+                    <li><h2><a href = 'webs/monday.html' >Monday</a></h2>     </li>
+                    <li><h2><a href = 'webs/tuesday.html'>Tuesday</a></h2>    </li>
+                    <li><h2><a href = 'webs/wednesday.html'>Wednesday</a></h2></li>
+                    <li><h2><a href = 'webs/thursday.html'>Thursday</a></h2>  </li>
+                    <li><h2><a href = 'webs/friday.html'>Friday</a></h2>      </li>
                 </ul>
             </nav>
         </main>
+    </body>
 </html>
