Add Tuesday, Wednesday, Thursday, Friday websites , Add a Miss Click button, Missing links on all except monday

--- a/gym-routine/webs/monday.html
+++ b/gym-routine/webs/monday.html
@@ -6,9 +6,9 @@
         <title> Monday </title>
         <link rel = 'stylesheet' href ='../styles.css'>
     </head>
-    <body class = 'monday-list'>  
+    <body class = 'list'>  
         <header class = 'main-title'>
-            <h1> Today : <h1>
+            <h1> Today : Legs<h1>
         </header>
         <main>
             <ol>
@@ -20,5 +20,8 @@
                 <li><h2>Gemelos 4x20<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/extension-de-gemelos-sentado-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
             <ol>
         </main>
+        <footer>
+            <h3><strong>Miss Click?<code>--></code><a href = '../index.html'>Here</a></strong></h3>
+        </footer>
     </body>
 </html>
