Close an open h1 in Header

--- a/gym-routine/webs/friday.html
+++ b/gym-routine/webs/friday.html
@@ -8,7 +8,7 @@
     </head>
     <body class = 'list'>  
         <header class = 'main-title'>
-            <h1> Today : Back & Shoulders<h1>
+            <h1> Today : Back & Shoulders</h1>
         </header>
         <main>
             <ol>
