--- a/gym-routine/webs/tuesday.html
+++ b/gym-routine/webs/tuesday.html
@@ -8,7 +8,7 @@
     </head>
     <body class = 'list'>  
         <header class = 'main-title'>
-            <h1> Today : Chest & Triceps<h1>
+            <h1> Today : Chest & Triceps</h1>
         </header>
         <main>
             <ol>
