--- a/gym-routine/webs/wednesday.html
+++ b/gym-routine/webs/wednesday.html
@@ -8,7 +8,7 @@
     </head>
     <body class = 'list'>  
         <header class = 'main-title'>
-            <h1> Today : Back & Biceps<h1>
+            <h1> Today : Back & Biceps</h1>
         </header>
         <main>
             <ol>
