Add missing links to each exercise, exchange routine between monday and tuesday

--- a/gym-routine/webs/monday.html
+++ b/gym-routine/webs/monday.html
@@ -12,12 +12,12 @@
         </header>
         <main>
             <ol>
-                <li><h2>Sentadilla con Barra 4x8 <code> ---> </code><a href = 'https://www.adfisioterapiavalencia.com/blog/sentadilla-con-barra/#:~:text=rendimiento%20y%20bienestar!-,T%C3%89CNICA,-CORRECTA%20PARA%20REALIZAR' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
-                <li><h2>Prensa 90 4x10<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/prensa-horizontal-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Peso Muerto Romano con Mancuernas 3x12<code> ---> </code><a href = 'https://www.menshealth.com/es/fitness/a28448594/peso-muerto-rumano/#:~:text=Explicado%20paso%20por%20paso%2C%20la%20correcta%20ejecuci%C3%B3n%20del%20peso%20muerto%20rumano%20es%3A' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Cuadriceps Maquina 3x12<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/extension-de-cuadriceps/#:~:text=Si%C3%A9ntate%20en%20la%20m%C3%A1quina' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Isquiotibiales Maquina 3x15<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-femoral-tumbado/#:~:text=Ajusta%20el%20coj%C3%ADn%20de%20los' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Gemelos 4x20<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/extension-de-gemelos-sentado-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Press Banca Plano 4x8<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/como-utilizar-correctamente-el-press-de-banca/#T%C3%A9cnica:~:text=press%20de%20banca-,El%20banco,-Si%C3%A9ntate%20en%20la' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
+                <li><h2>Press Inclinado con Mancuernas 4x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/press-inclinado-con-mancuernas/#t%C3%A9cnica:~:text=Deltoides%20anterior-,T%C3%A9cnica,-Ajusta%20el%20banco' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Aperturas con Mancuernas 3x12<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/aperturas-con-mancuernas-como-hacer/#C%C3%B3mo:~:text=Esta%20es%20la%20ejecuci%C3%B3n%3A' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Fondos en Paralelas 3x10<code> ---> </code><a href = 'https://www.vitonica.com/musculacion/guia-para-principiantes-xli-dips-o-fondos-en-paralelas#:~:text=el%20ejercicio.-,Inspiramos,-y%20flexionamos%20los' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Triceps Polea 3x12<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/extension-de-triceps-polea-alta/#:~:text=en%20polea%20alta-,Engancha,-una%20barra%20recta' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Patada Triceps 3x15<code> ---> </code><a href = 'https://www.menshealth.com/es/fitness/a40456037/patada-triceps-mancuernas-como-hacer/#:~:text=MEN%27S%20HEALTH%20US-,C%C3%B3mo,-hacer%20la%20patada' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
             </ol>
         </main>
         <footer>
