--- a/gym-routine/webs/wednesday.html
+++ b/gym-routine/webs/wednesday.html
@@ -12,12 +12,12 @@
         </header>
         <main>
             <ol>
-                <li><h2>Dominadas 4x8<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
-                <li><h2>Remo con Barra 4x10<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Jalon al Pecho 3x12<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Peso Muerto con Barra 3x8<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Curl Biceps con Barra 3x10<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Curl Martillo 3x12<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Dominadas 4x8<code> ---> </code><a href = 'https://www.nike.com/mx/a/como-y-por-que-hacer-una-dominada#:~:text=C%C3%B3mo%20hacer%20una%20dominada' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
+                <li><h2>Remo con Barra 4x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/remo-inclinado-con-barra-beneficios-tecnica/#:~:text=inclinado%20con%20barra-,Sujeta,-una%20barra%20con' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Jalon al Pecho 3x12<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/jalon-frontal-polea/#c%C3%B3mo:~:text=jal%C3%B3n%20al%20pecho-,Primero,-%2C%20aseg%C3%BArate%20de%20que' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Peso Muerto con Barra 3x8<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/ejercicios-peso-muerto/#:~:text=hacer%20peso%20muerto-,Posici%C3%B3n,-inicial%20de%20pie' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Curl Biceps con Barra 3x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-de-biceps-como-hacerlo/#:~:text=Ejecuci%C3%B3n%3A-,Para,-comenzar%2C%20deberemos%20posicionar' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Curl Martillo 3x12<code> ---> </code><a href = 'https://eresfitness.com/curl-martillo-con-mancuernas/#:~:text=y%20errores%20frecuentes-,%C2%BFC%C3%B3mo%20hacer%20el%20curl%20martillo%20con%20mancuernas%3F,-De%20pie%2C%20con' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
             </ol>
         </main>
         <footer>
