--- a/gym-routine/webs/friday.html
+++ b/gym-routine/webs/friday.html
@@ -12,12 +12,12 @@
         </header>
         <main>
             <ol>
-                <li><h2>Dominadas 3x8<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
-                <li><h2>Remo con Barra 3x10<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Press Militar con Mancuernas 3x8<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Curl Biceps con Mancuernas 3x10<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Elevaciones Laterales 3x15<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Triceps Polea<code> ---> </code><a href = '' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Dominadas 3x8<code> ---> </code><a href = 'https://www.nike.com/mx/a/como-y-por-que-hacer-una-dominada#:~:text=C%C3%B3mo%20hacer%20una%20dominada' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
+                <li><h2>Remo con Barra 3x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/remo-inclinado-con-barra-beneficios-tecnica/#:~:text=inclinado%20con%20barra-,Sujeta,-una%20barra%20con' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Press Militar con Mancuernas 3x8<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/press-militar-barra-o-mancuernas/#mancuernas:~:text=T%C3%A9cnica-,Si%C3%A9ntate,-en%20un%20banco' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Curl Biceps con Mancuernas 3x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-de-biceps-como-hacerlo/#:~:text=evites%20posibles%20lesiones.-,Ejecuci%C3%B3n,-%3A' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Elevaciones Laterales 3x15<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/como-hacer-elevaciones-laterales/#c%C3%B3mo:~:text=laterales%20con%20mancuernas-,Para,-la%20variante%20de' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+                <li><h2>Triceps Polea<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/extension-de-triceps-polea-alta/#:~:text=en%20polea%20alta-,Engancha,-una%20barra%20recta' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
             </ol>
         </main>
         <footer>
