--- a/webs/friday.html
+++ b/webs/friday.html
@@ -8,17 +8,17 @@
     </head>
     <body class = 'list'>  
         <header class = 'main-title'>
-            <h1> Today : Back & Shoulders</h1>
+            <h1> Today : Legs </h1>
         </header>
         <main>
-            <ol>
-                <li><h2>Dominadas 3x8<code> ---> </code><a href = 'https://www.nike.com/mx/a/como-y-por-que-hacer-una-dominada#:~:text=C%C3%B3mo%20hacer%20una%20dominada' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
-                <li><h2>Remo con Barra 3x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/remo-inclinado-con-barra-beneficios-tecnica/#:~:text=inclinado%20con%20barra-,Sujeta,-una%20barra%20con' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Press Militar con Mancuernas 3x8<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/press-militar-barra-o-mancuernas/#mancuernas:~:text=T%C3%A9cnica-,Si%C3%A9ntate,-en%20un%20banco' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Curl Biceps con Mancuernas 3x10<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-de-biceps-como-hacerlo/#:~:text=evites%20posibles%20lesiones.-,Ejecuci%C3%B3n,-%3A' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Elevaciones Laterales 3x15<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/como-hacer-elevaciones-laterales/#c%C3%B3mo:~:text=laterales%20con%20mancuernas-,Para,-la%20variante%20de' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-                <li><h2>Triceps Polea<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/extension-de-triceps-polea-alta/#:~:text=en%20polea%20alta-,Engancha,-una%20barra%20recta' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
-            </ol>
+        <ol>
+            <li><h2>Step Up con Mancuernas 3x10 c/ pierna<code> ---> </code><a href = 'https://eresfitness.com/step-up-con-mancuernas/#:~:text=Instrucciones%20para%20hacer%20el%20Step%2DUp%20con%20mancuernas' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></li></h2>
+            <li><h2>Peso Muerto Sumo 3x8<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/ejercicios-peso-muerto/#:~:text=hace%20la%20perfecci%C3%B3n.-,Posici%C3%B3n,-inicial%20de%20pie' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+            <li><h2>Cuadriceps Maquina 3x12<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/extension-de-cuadriceps/#:~:text=Si%C3%A9ntate%20en%20la%20m%C3%A1quina' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+            <li><h2>Isquiotibiales 3x15<code> ---> </code><a href = 'https://www.myprotein.es/thezone/entrenamiento/curl-femoral-tumbado/#:~:text=Ajusta%20el%20coj%C3%ADn%20de%20los' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+            <li><h2>Sentailla con Barra 3x10<code> ---> </code><a href = 'https://www.adfisioterapiavalencia.com/blog/sentadilla-con-barra/#:~:text=rendimiento%20y%20bienestar!-,T%C3%89CNICA,-CORRECTA%20PARA%20REALIZAR' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+            <li><h2>Gemelos 4x20<code> ---> </code><a href = 'https://entrenamientos.com/ejercicios/extension-de-gemelos-sentado-en-maquina/' target = '_blank' rel = 'noopener noreferrer'>Explanation</a></h2></li>
+        </ol>
         </main>
         <footer>
             <h3><strong>Miss Click?<code>--></code><a href = '../index.html'>Here</a></strong></h3>
